sessao-09-10/sessao_9/baseline/05-symfony-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: symfony-demo
spec:
  selector:
    app: symfony-demo
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
